--- a/addons/odoo_training/views/session_views.xml
+++ b/addons/odoo_training/views/session_views.xml
@@ -130,11 +130,13 @@
             <field name="arch" type="xml">
                 <form string="Session Form">
                     <header>
+                        <button name="action_print_session" type="object" string="Print Session"
+                                invisible="state != 'open'" class="oe_highlight"/>
                         <button name="action_confirm" type="object" string="Confirm" invisible="state != 'draft'"
-                                class="btn-primary"/>
+                                groups="NAME_MODUL.group_training_manager" class="btn-primary"/>
                         <button name="action_cancel" type="object" string="Cancel" invisible="state != 'open'"/>
                         <button name="action_close" type="object" string="Close" invisible="state != 'open'"
-                                class="oe_highlight"/>
+                                groups="NAME_MODUL.group_training_manager" class="oe_highlight"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
